logs/api.log
  File "/Users/tom/Documents/GitHub/zanalytics/zanalytics_api_service.py", line 247
    <<<<<<< HEAD
    ^^
SyntaxError: invalid syntax
